[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/textures/shit_wave/spritesheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/ShitWave.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "exit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=2]
resource_name = "spawn_In"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "wade"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.1, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 2, 3, 3 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 56.4979

[node name="ShitWave" type="Area2D"]
collision_layer = 2147483652
collision_mask = 2147483696
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
hframes = 8
frame = 4

[node name="Animations" type="AnimationPlayer" parent="."]
autoplay = "spawn_In"
anims/exit = SubResource( 1 )
anims/spawn_In = SubResource( 2 )
anims/wade = SubResource( 3 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 39 )
scale = Vector2( 1, 0.25 )
shape = SubResource( 4 )

[node name="IfVisible" type="VisibilityNotifier2D" parent="."]
position = Vector2( -37, 38 )
[connection signal="body_entered" from="." to="." method="_on_ShitWave_body_entered"]
[connection signal="animation_finished" from="Animations" to="." method="_on_Animations_animation_finished"]
[connection signal="screen_exited" from="IfVisible" to="." method="_on_IfVisible_screen_exited"]
